Sending request is working

--- a/Gifty.Api/appsettings.json
+++ b/Gifty.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "JWT": {
+    "Key": "This is my super secret key for Gifty Backend 123!",
+    "Issuer": "http://localhost:5010"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=GiftyDb;User Id=sa;Password=YourPassword123!;TrustServerCertificate=True;"
   },
