Sending email reminder works!

--- a/Gifty.Api/appsettings.json
+++ b/Gifty.Api/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "EmailSettings": {
+    "SmtpServer": "smtp.example.com",
+    "SmtpPort": 587,
+    "SmtpUser": "info@gifty.com",
+    "SmtpPass": "Password123!"
+  },
   "JWT": {
     "Key": "This is my super secret key for Gifty Backend 123!",
     "Issuer": "http://localhost:5010"
@@ -14,3 +20,4 @@
   },
   "AllowedHosts": "*"
 }
+
