Wihslist items are now displayed and could be deleted

--- a/Gifty.Api/appsettings.json
+++ b/Gifty.Api/appsettings.json
@@ -5,6 +5,11 @@
     "SmtpUser": "info@gifty.com",
     "SmtpPass": "Password123!"
   },
+  "AmazonSettings": {
+    "AccessKeyId": "AKIA4VDBMGWFTA35EMSV",
+    "SecretAccessKey": "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",
+    "AssociateTag": "gifty006-20"
+  },
   "JWT": {
     "Key": "This is my super secret key for Gifty Backend 123!",
     "Issuer": "http://localhost:5010"
