--- a/Gifty.Application/Gifty.Application.csproj
+++ b/Gifty.Application/Gifty.Application.csproj
@@ -12,7 +12,11 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="AWSSDK.Core" Version="3.7.400.24" />
+      <PackageReference Include="AWSSDK.SimpleSystemsManagement" Version="3.7.402.3" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
